--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,155 +3,184 @@
 }
 
 a {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 body {
-    color: black;
+  color: black;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 main {
-    padding: 10px;
-    max-width: 960px;
-    margin: 0 auto;
+  padding: 10px;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-    margin-bottom: 50px;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  align-items: center;
 }
 header a{
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 header a.logo{
-    font-weight: bold;
-    font-size: 1.5rem;
+  font-weight: bold;
+  font-size: 1.5rem;
 
 }
 header nav{
-    display: flex;
-    gap: 24px;
+  display: flex;
+  gap: 24px;
 }
 
 div.post{
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
-    margin-bottom: 30px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  margin-bottom: 30px;
 
 }
 @media screen and (min-width:700px){
-    div.post{
-    grid-template-columns: 0.9fr 1.1fr;
+  div.post{
+  grid-template-columns: 0.9fr 1.1fr;
 }}
 div.post div.texts h2 {
-    margin: 0;
-    font-size: 2rem;
+  margin: 0;
+  font-size: 2rem;
 }
-div.post div.text a{
-    text-decoration: none;
-    color: lightskyblue;
+div.post div.texts a{
+  text-decoration: none;
+  color: inherit;
 }
 
 div.post p.info{
-    margin: 24px 0;
-    color: rgb(0, 0, 0);
-    font-size: 1rem;
-    font-weight: bold;
-    display: flex;
-    gap: 10px;
+  margin: 24px 0;
+  color: rgb(0, 0, 0);
+  font-size: 1rem;
+  font-weight: bold;
+  display: flex;
+  gap: 10px;
 }
 
 div.post p.info a.author{
-    color: lightskyblue;
+  color: blue;
 }
 div.post p.summary{
-    margin: 10px 0;
-    line-height: 1.8rem;
+  margin: 10px 0;
+  line-height: 1.8rem;
 }
-
+div.post-page div.image {
+  max-height: 300px;
+  display: flex;
+  overflow: hidden;
+}
 
 div.post-page div.image img {
   object-fit: cover;
   object-position: center center;
-  width:  100%;
+  width: 100%;
 }
 
-div.post-page a{
-  color: #666;
+div.post-page a {
+  color: black;
   text-decoration: underline;
 }
-
 div.post-page h1{
   text-align: center;
   margin: 10px 0;
+
 }
 
 div.post-page time{
   text-align: center;
   display: block;
-  font: 1em ;
-  color: #ccc;
+  font-size: 1rem;
+  color: rgb(47, 49, 49);
   margin: 10px 0;
 }
-
-div.post-page .author{
+div.post-page div.author{
   text-align: center;
   margin-bottom: 20px;
-  font-size: 1.4rem;
+  font-size: 0.7rem;
   font-weight: bold;
 }
-
-div.post-page p{
-  line-height: 1.8rem;
-  margin: 30rem;
+div.post-page p {
+  line-height: 1.7rem;
+  margin: 30px 0 5px;
 }
 
-from.login form.register {
-  max-width: 350px;
+form.login, form.register {
+  max-width: 400px;
   margin: 0 auto;
+  border-style: solid;
+  padding: 30px;
+  border-radius: 7%;
+  box-shadow:#334 0.5rem 1px 2px 2px ;
 }
-
-input{
+input {
   display: block;
-  margin-bottom: 4px;
+  margin-bottom: 5px;
   width: 100%;
-  padding: 10px 8px;
-  border: 2px solid #577;
-  border-radius: 3px ;
-  background-color: aliceblue;
+  padding: 5px 7px;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  background-color: #fff;
+  color: black;
+}
+button {
+  cursor: pointer;
+  width: 100%;
+  display: block;
+  background-color: rgb(47, 25, 161);
+  border: 0;
+  color: #fff;
+  border-radius: 5px;
+  padding: 7px 0;
 }
 
-button{
-cursor: pointer;
-width: 100%;
-display: block;
-background-color: green;
-border: #ccc;
-border-radius: 5px;
-padding: 8px 0;
-}
-form.login h1,form.register h1{
+form.login h1, form.register h1 {
   text-align: center;
+  
 }
 
-.image-container {
-  position: relative;
-  overflow: hidden;
+div.edit-row{
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.image-container img {
-  transition: transform 0.3s ease;
+div.post-page a.edit-btn{
+  background-color: #333;
+  display: inline;
+  align-items: center;
+  gap: 5px;
+  color: #fff;
+  padding: 15px 30px;
+  border-radius: 5px;
+  text-decoration: none;
+}
+a svg {
+  height: 20px;
 }
 
-.image-container:hover img {
-  transform: scale(1.2); /* ทำให้ภาพขยายขึ้น 20% เมื่อ hover */
+.delete-confirmation {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.delete-confirmation p {
+  margin-bottom: 10px;
+}
+
+.delete-confirmation button {
+  margin-right: 10px;
 }
